Adjust css for tree/content view.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
         </div>
       </mat-tab>
       <mat-tab label="Data">
-        <app-main-window-view [ngStyle]="{'height': '100%'}" [topSys]="topSys">
+        <app-main-window-view [topSys]="topSys">
         </app-main-window-view>
       </mat-tab>
     </mat-tab-group>
