Add number edit box.

--- a/src/app/ui-content-view/top-sys-view/top-sys-view.component.html
+++ b/src/app/ui-content-view/top-sys-view/top-sys-view.component.html
@@ -34,10 +34,10 @@
       <tr>
         <td>Address Width:</td>
         <td>
-          <app-edit-box
+          <app-number-edit-box
             title="Address Width"
             [(value)]="topSys.addressWidth">
-          </app-edit-box>
+          </app-number-edit-box>
         </td>
       </tr>
       <tr>
