Use number edit box for datawidth.

--- a/src/app/ui-content-view/top-sys-view/top-sys-view.component.html
+++ b/src/app/ui-content-view/top-sys-view/top-sys-view.component.html
@@ -43,10 +43,10 @@
       <tr>
         <td>Data Width:</td>
         <td>
-          <app-edit-box
+          <app-number-edit-box
             title="Data Width"
             [(value)]="topSys.dataWidth">
-          </app-edit-box>
+          </app-number-edit-box>
         </td>
       </tr>
     </tbody>
