Add topSys as input for block-instances-view.

--- a/src/app/main-window-view/main-window-view.component.html
+++ b/src/app/main-window-view/main-window-view.component.html
@@ -28,6 +28,7 @@
       [ngStyle]="{'grid-area': '1 / 1 / 2 / 2'}">
     </app-top-sys-tree-view>
     <app-top-sys-content-view
+      [topSys]="topSys"
       [registerPrinterObject]="selected"
       [ngStyle]="{'grid-area': '1 / 2 / 2 / 5'}">
     </app-top-sys-content-view>
