--- a/src/app/ui-content-view/top-sys-content-view/top-sys-content-view.component.html
+++ b/src/app/ui-content-view/top-sys-content-view/top-sys-content-view.component.html
@@ -9,6 +9,7 @@
     </app-block-view>
   <app-block-instances-view
     *ngIf="isBlockInstances()"
+    [topSys]="topSys"
     [blockInstances]="registerPrinterObject">
   </app-block-instances-view>
     <app-block-instance-view
