Apply hex editor to more fields.

--- a/src/app/ui-content-view/block-template-view/block-template-view.component.html
+++ b/src/app/ui-content-view/block-template-view/block-template-view.component.html
@@ -14,7 +14,7 @@
     <ng-container matColumnDef="offset">
       <th mat-header-cell *matHeaderCellDef>Offset</th>
       <td mat-cell *matCellDef="let register">
-        {{ '0x' + register.offset.toString(16) }}
+        <app-hex-editor [(value)]="register.offset"></app-hex-editor>
       </td>
     </ng-container>
     <ng-container matColumnDef="description">
@@ -47,7 +47,7 @@
           <ng-container matColumnDef="defaultValue">
             <th mat-header-cell *matHeaderCellDef>Default Value</th>
             <td mat-cell *matCellDef="let field">
-              {{ '0x' + field.defaultValue.toString(16) }}
+              <app-hex-editor [(value)]="field.defaultValue"></app-hex-editor>
             </td>
           </ng-container>
           <ng-container matColumnDef="access">
