--- a/src/app/ui-content-view/block-template-view/block-template-view.component.html
+++ b/src/app/ui-content-view/block-template-view/block-template-view.component.html
@@ -14,7 +14,7 @@
     <ng-container matColumnDef="offset">
       <th mat-header-cell *matHeaderCellDef>Offset</th>
       <td mat-cell *matCellDef="let register">
-        <app-hex-editor [(value)]="register.offset"></app-hex-editor>
+        <app-hex-edit-box [(value)]="register.offset"></app-hex-edit-box>
       </td>
     </ng-container>
     <ng-container matColumnDef="description">
@@ -47,7 +47,7 @@
           <ng-container matColumnDef="defaultValue">
             <th mat-header-cell *matHeaderCellDef>Default Value</th>
             <td mat-cell *matCellDef="let field">
-              <app-hex-editor [(value)]="field.defaultValue"></app-hex-editor>
+              <app-hex-edit-box [(value)]="field.defaultValue"></app-hex-edit-box>
             </td>
           </ng-container>
           <ng-container matColumnDef="access">
