--- a/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
+++ b/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
@@ -34,13 +34,15 @@
     <ng-container matColumnDef="addressWidth">
       <th mat-header-cell *matHeaderCellDef>Address Width</th>
       <td mat-cell *matCellDef="let blockInstance">
-        {{ blockInstance.addressWidth }}
+        <app-inherited-number-edit-box [(value)]="blockInstance.addressWidth">
+        </app-inherited-number-edit-box>
       </td>
     </ng-container>
     <ng-container matColumnDef="dataWidth">
       <th mat-header-cell *matHeaderCellDef>Data Width</th>
       <td mat-cell *matCellDef="let blockInstance">
-        {{ blockInstance.dataWidth }}
+        <app-inherited-number-edit-box [(value)]="blockInstance.dataWidth">
+        </app-inherited-number-edit-box>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
