Add capability to add new block instance.

--- a/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
+++ b/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
@@ -52,4 +52,9 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <button
+    mat-raised-button color="primary"
+    (click)="onAddBlockInstance()">
+    Add Block Instance
+  </button>
 </div>
