Add deletetblockinstance button.

--- a/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
+++ b/src/app/ui-content-view/block-instances-view/block-instances-view.component.html
@@ -57,4 +57,9 @@
     (click)="onAddBlockInstance()">
     Add Block Instance
   </button>
+  <button
+    mat-raised-button color="primary"
+    (click)="onDeleteBlockInstance()">
+    Delete Block Instance...
+  </button>
 </div>
