Add description edit dialog.

--- a/src/app/ui-components/description-edit-box/description-edit-box.component.html
+++ b/src/app/ui-components/description-edit-box/description-edit-box.component.html
@@ -1,5 +1,5 @@
 <ng-container>
-  <span id="description">
+  <span id="description" (dblclick)="onDoubleClick()">
     {{ value }}
   </span>
 </ng-container>
