--- a/src/app/ui-dialogs/description-edit-dlg/description-edit-dlg.component.html
+++ b/src/app/ui-dialogs/description-edit-dlg/description-edit-dlg.component.html
@@ -2,11 +2,13 @@
   Edit description...
 </h1>
 <div mat-dialog-content>
-  {{ data.description }}
+  <mat-form-field appearance="fill" mat-autosize="true">
+    <mat-label>Description</mat-label>
+    <textarea matInput [(ngModel)]="data.description" rows="10">
+    </textarea>
+  </mat-form-field>
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancelClick()">Cancel</button>
-  <!--
-  <button mat-button [mat-dialog-close]="selected" cdkFocusInitial>Ok</button>
-  -->
+  <button mat-button [mat-dialog-close]="data.description" cdkFocusInitial>Ok</button>
 </div>
