--- a/src/app/ui-tree-view/block-templates-node/block-templates-node.component.html
+++ b/src/app/ui-tree-view/block-templates-node/block-templates-node.component.html
@@ -1,1 +1,7 @@
 <span>Block Templates</span>
+<button mat-icon-button [matMenuTriggerFor]="menu">
+  <mat-icon>more_vert</mat-icon>
+</button>
+<mat-menu #menu="matMenu">
+    <button mat-menu-item (click)="addBlockTemplate()">Add Block Template</button>
+</mat-menu>
