Add remove block template function.

--- a/src/app/ui-tree-view/block-templates-node/block-templates-node.component.html
+++ b/src/app/ui-tree-view/block-templates-node/block-templates-node.component.html
@@ -3,5 +3,6 @@
   <mat-icon>more_vert</mat-icon>
 </button>
 <mat-menu #menu="matMenu">
-    <button mat-menu-item (click)="addBlockTemplate()">Add Block Template</button>
+  <button mat-menu-item (click)="addBlockTemplate()">Add Block Template</button>
+  <button mat-menu-item (click)="removeBlockTemplate()">Remove Block Template</button>
 </mat-menu>
