--- a/src/app/ui-content-view/fields-view/fields-view.component.html
+++ b/src/app/ui-content-view/fields-view/fields-view.component.html
@@ -36,7 +36,8 @@
   <ng-container matColumnDef="access">
     <th mat-header-cell *matHeaderCellDef>Access</th>
     <td mat-cell *matCellDef="let field">
-      {{ field.access }}
+      <app-access-selector [(access)]="field.access">
+      </app-access-selector>
     </td>
   </ng-container>
   <ng-container matColumnDef="description">
