--- a/src/app/ui-tree-view/register-printer-node/register-printer-node.component.html
+++ b/src/app/ui-tree-view/register-printer-node/register-printer-node.component.html
@@ -8,7 +8,7 @@
     *ngIf="registerPrinterTreeNode.type === 'PropertyNode'">
   </app-property-node>
   <app-block-instances-node
-    *ngIf="isAddressMapsTreeNode()">
+    *ngIf="isBlockInstancesTreeNode()">
   </app-block-instances-node>
   <app-block-instance-node
     [blockInstanceTreeNode]="registerPrinterTreeNode"
