--- a/src/app/main-window-view/main-window-view.component.html
+++ b/src/app/main-window-view/main-window-view.component.html
@@ -34,7 +34,7 @@
     </app-top-sys-tree-view>
     <app-top-sys-content-view
       [topSys]="topSys"
-      [registerPrinterObject]="selected"
+      [selected]="selected"
       [ngStyle]="{'grid-area': '1 / 2 / 2 / 5'}">
     </app-top-sys-content-view>
   </div>
