--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,35 @@
 <div [ngStyle]="{'height': '100%'}">
-  <div [ngStyle]="{'display': 'grid', 'height': '100%', 'grid-template-columns': '25% 25% 25% 25%', 'grid-template-rows': '70% 2% 28%'}">
-    <div *ngIf="!isElectronApp" [ngStyle]="{'grid-area': '1 / 1 / 1 / 5'}">
-      <button
-        mat-raised-button
-        (click)="onOpenClicked()">
-        Open...
-      </button>
-      <button
-        mat-raised-button
-        (click)="onSaveClicked()">
-        Save
-      </button>
-    </div>
-    <mat-tab-group [ngStyle]="{'grid-area': '1 / 1 / 2 / 5'}">
-      <mat-tab label="Load">
-        <div *ngIf="isElectronApp">
-          <app-excel-selector>
-          </app-excel-selector>
-        </div>
-      </mat-tab>
-      <mat-tab label="Data">
-        <app-main-window-view [topSys]="topSys">
-        </app-main-window-view>
-      </mat-tab>
-    </mat-tab-group>
-    <mat-divider
-      [ngStyle]="{'grid-area': '2 / 1 / 3 / 5'}">
-    </mat-divider>
-    <app-top-sys-console-view
-      [ngStyle]="{'grid-area': '3 / 1 / 4 / 5'}">
-    </app-top-sys-console-view>
-  </div>
+  <as-split direction="vertical">
+    <as-split-area [size]="80">
+      <div *ngIf="!isElectronApp">
+        <button
+          mat-raised-button
+          (click)="onOpenClicked()">
+          Open...
+        </button>
+        <button
+          mat-raised-button
+          (click)="onSaveClicked()">
+          Save
+        </button>
+      </div>
+      <mat-tab-group>
+        <mat-tab label="Load">
+          <div *ngIf="isElectronApp">
+            <app-excel-selector>
+            </app-excel-selector>
+          </div>
+        </mat-tab>
+        <mat-tab label="Data">
+          <app-main-window-view [topSys]="topSys">
+          </app-main-window-view>
+        </mat-tab>
+      </mat-tab-group>
+    </as-split-area>
+    <as-split-area [size]="20">
+      <app-top-sys-console-view>
+      </app-top-sys-console-view>
+    </as-split-area>
+  </as-split>
 </div>
 <router-outlet></router-outlet>
