--- a/src/app/main-window-view/main-window-view.component.scss
+++ b/src/app/main-window-view/main-window-view.component.scss
@@ -7,11 +7,7 @@
   height: 100%;
 }
 .content {
-  display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 100%;
-  flex-grow: 1;
-  overflow: hidden;
+  height: 100%;
 }
 app-top-sys-tree-view {
   overflow: scroll;
