--- a/src/app/ui-content-view/block-template-view/block-template-view.component.html
+++ b/src/app/ui-content-view/block-template-view/block-template-view.component.html
@@ -1,5 +1,49 @@
 <div>
   <h2>Block Template: {{ blockTemplate.blockType }}</h2>
+  <table
+    mat-table
+    [dataSource]="blockTemplate.arrayTemplates"
+    class="mat-elevation-z8"
+    multiTemplateDataRows>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let blockTemplate">
+        <app-edit-box [(value)]="blockTemplate.name"></app-edit-box>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="length">
+      <th mat-header-cell *matHeaderCellDef>Length</th>
+      <td mat-cell *matCellDef="let blockTemplate">
+        <app-number-edit-box [(value)]="blockTemplate.length"></app-number-edit-box>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="offset">
+      <th mat-header-cell *matHeaderCellDef>Offset</th>
+      <td mat-cell *matCellDef="let blockTemplate">
+        <app-hex-edit-box [(value)]="blockTemplate.offset"></app-hex-edit-box>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="startAddress">
+      <th mat-header-cell *matHeaderCellDef>StartAddress</th>
+      <td mat-cell *matCellDef="let blockTemplate">
+        <app-hex-edit-box [(value)]="blockTemplate.startAddress"></app-hex-edit-box>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="endAddress">
+      <th mat-header-cell *matHeaderCellDef>endAddress</th>
+      <td mat-cell *matCellDef="let blockTemplate">
+        <app-hex-edit-box [(value)]="blockTemplate.endAddress"></app-hex-edit-box>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Description</th>
+      <td mat-cell *matCellDef="let blockTemplate">
+        <app-description-edit-box [(value)]="blockTemplate.description"></app-description-edit-box>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="arrayTemplatesDisplayColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: arrayTemplatesDisplayColumns;"></tr>
+  </table>
   <button
     mat-raised-button color="primary"
     (click)="onAddRegister()">
