--- a/src/app/ui-content-view/block-template-view/block-template-view.component.html
+++ b/src/app/ui-content-view/block-template-view/block-template-view.component.html
@@ -14,7 +14,8 @@
     mat-table
     [dataSource]="blockTemplate.arrayTemplates"
     class="mat-elevation-z8"
-    multiTemplateDataRows>
+    multiTemplateDataRows
+    #arrayTemplateTable>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let blockTemplate">
@@ -69,7 +70,8 @@
     mat-table
     [dataSource]="blockTemplate.registerTemplates"
     class="mat-elevation-z8"
-    multiTemplateDataRows>
+    multiTemplateDataRows
+    #registerTemplateTable>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
       <td mat-cell *matCellDef="let register">
