--- a/src/app/ui-content-view/field-view/field-view.component.html
+++ b/src/app/ui-content-view/field-view/field-view.component.html
@@ -25,8 +25,16 @@
         <td>{{ field.access }}</td>
       </tr>
       <tr>
+        <td>User_visible: </td>
+        <td>{{ field.user_visible }}</td>
+      </tr>
+      <tr>
         <td>Description: </td>
         <td>{{ field.description }}</td>
+      </tr>
+      <tr>
+        <td>Description_chinese: </td>
+        <td>{{ field.description_chinese }}</td>
       </tr>
     </tbody>
   </table>
