--- a/src/app/ui-tree-view/top-sys-tree-view/top-sys-tree-view.component.html
+++ b/src/app/ui-tree-view/top-sys-tree-view/top-sys-tree-view.component.html
@@ -1,6 +1,6 @@
 <div>
   <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-    <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle class="example-tree-node">
+    <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle class="example-tree">
       <div>
         <app-register-printer-node
           (click)="onClick(node)"
@@ -9,7 +9,7 @@
       </div>
     </mat-tree-node>
     <!-- This is the tree node template for expandable nodes -->
-    <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" class="example-tree-node">
+    <mat-nested-tree-node *matTreeNodeDef="let node; when: hasChild" class="example-tree">
       <button mat-icon-button matTreeNodeToggle [attr.aria-label]="'toggle ' + node.name">
         <mat-icon class="mat-icon-rtl-mirror">
           {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
@@ -20,7 +20,8 @@
         (dblclick)="onDblClick(node)"
         [registerPrinterTreeNode]="node">
       </app-register-printer-node>
-      <div [class.example-tree-invisible]="!treeControl.isExpanded(node)">
+      <div [class.example-tree-invisible]="!treeControl.isExpanded(node)"
+        role="group">
         <ng-container matTreeNodeOutlet></ng-container>
       </div>
     </mat-nested-tree-node>
