--- a/src/app/ui-tree-view/top-sys-tree-view/top-sys-tree-view.component.scss
+++ b/src/app/ui-tree-view/top-sys-tree-view/top-sys-tree-view.component.scss
@@ -1,11 +1,27 @@
 .example-tree-invisible {
-    display: none;
+  display: outside;
 }
 
-.example-tree-node {
-    display: block;
+.example-tree ul,
+.example-tree li {
+  margin-top: 0;
+  margin-bottom: 0;
+  list-style-type: none;
 }
 
-.example-tree-node .example-tree-node {
-    padding-left: 40px;
+/*
+ * This padding sets alignment of the nested nodes.
+ */
+ 
+.example-tree .mat-nested-tree-node div[role=group] {
+  padding-left: 40px;
+}
+
+/*
+ * Padding for leaf nodes.
+ * Leaf nodes need to have padding so as to align with other non-leaf nodes
+ * under the same parent.
+ */
+.example-tree div[role=group] > .mat-tree-node {
+  padding-left: 40px;
 }
