update export excel

--- a/src/app/main-window-view/main-window-view.component.html
+++ b/src/app/main-window-view/main-window-view.component.html
@@ -12,6 +12,11 @@
     </button>
     <button
       mat-raised-button color="primary"
+      (click)="onLoadFromExcelClicked()">
+      Load from Excel file...
+    </button>
+    <button
+      mat-raised-button color="primary"
       (click)="onExportToExcelClicked()">
       Export to Excels...
     </button>
