--- a/src/app/ui-content-view/fields-view/fields-view.component.html
+++ b/src/app/ui-content-view/fields-view/fields-view.component.html
@@ -59,14 +59,7 @@
         </app-description-edit-box>
       </td>
     </ng-container>
-    <ng-container matColumnDef="description_chinese">
-      <th mat-header-cell *matHeaderCellDef>Description_chinese</th>
-      <td mat-cell *matCellDef="let field">
-        <app-description-edit-box [(value)]="field.description_chinese">
-        </app-description-edit-box>
-      </td>
-    </ng-container>
-    <tr mat-header-row *matHeaderRowDef="['name', 'msb','lsb', 'defaultValue', 'access', 'user_visible', 'description', 'description_chinese']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['name', 'msb','lsb', 'defaultValue', 'access', 'user_visible', 'description', 'description_chinese'];"></tr>
+    <tr mat-header-row *matHeaderRowDef="['name', 'msb','lsb', 'defaultValue', 'access', 'user_visible', 'description']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['name', 'msb','lsb', 'defaultValue', 'access', 'user_visible', 'description'];"></tr>
   </table>
 </div>
